[build-system]
requires = ["setuptools>=68", "Cython>=3.0", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "xclib"
version = "0.97"
description = "An extreme classification library for python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { email = "kunalsdahiya@gmail.com" },
    { email = "me@anshulmittal.org" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "numba>=0.57",
    "nmslib>=2.1.1",
    "fasttext>=0.9.2",
]

[project.urls]
Homepage = "https://github.com/kunaldahiya/xclib"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "cython>=3.0",
]
